--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^6.5.0",
     "@mui/x-date-pickers": "^6.5.0",
     "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
